--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,15 @@
 
 <div class="box">
     <h1>Login</h1>
-
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <p class=flashes>
+                {% for message in messages %}
+                {{ message }}
+                {% endfor %}
+            </p>
+        {% endif %}
+    {% endwith %}
     <form action="{{ url_for('login') }}" method="post">
         <input type="text" name="email" placeholder="Email" required="required"/>
         <input type="password" name="password" placeholder="Password" required="required"/>
